Mise a jour du projet apres le live coding

--- a/front/html/index.html
+++ b/front/html/index.html
@@ -85,4 +85,5 @@
     </footer>
   </body>
   <script src="../js/script.js"></script>
+  <script  src="../js/helpers/fetchData.js"></script>
 </html>
