--- a/front/html/product.html
+++ b/front/html/product.html
@@ -111,5 +111,6 @@
       </div>
     </footer>
   <script src="../js/product.js"></script>
+  <script  src="../js/helpers/fetchData.js"></script>
   </body>
 </html>
