Afficher  le panier sur la page panier

--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -135,4 +135,6 @@
     </footer>
   <script src="../js/cart.js"></script>
   </body>
+  <script src="../js/cart.js"></script>
+  <script  src="../js/helpers/fetchData.js"></script>
 </html>
